--- a/html-files/about.html
+++ b/html-files/about.html
@@ -40,7 +40,7 @@
         </div>
 
         <div class="content">
-            <div class="aboutus" id="content">
+            <div class="aboutus">
                 <div class="textbox" id="aboutus-textbox">
                     <h1>Welcome!</h1>
                     <p>-to Real Estate Agency, a premier real estate agency established in 1987. Founded with the vision of revolutionizing the real estate industry, our company was born out of the desire to redefine the standard of excellence in property transactions and make it easier for poeple to find their dream homes.</p>
@@ -81,7 +81,7 @@
                 -->
             </div>
 
-            <div class="background" id="content">
+            <div class="background">
                 <div class="textbox" id="background-textbox">
                     <h2>Our Background</h2>
                     <p>Real Estate Agency traces its roots back to 1987 when it was founded by a visionary neighborhood real estate agent with a passion for creating a better future for renters, buyers, and sellers. Fueled by a desire to simplify the real estate process and enhance the quality of life for all involved, our founder embarked on a mission to redefine the industry's standards.</p>
@@ -100,16 +100,33 @@
                 <a href="login.html">become a member today!</a>
             </div>
 
-            <div class="textbox" id="content">
+            <div class="textbox" id="FAQ">
                 <h2>FAQ</h2>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
+                <div class="buying" id="faq-options">
+                    <h3>Buying Property:</h4>
+                        <p>What the first step of the home buying process?</p>
+                        <p>How long does it take to buy a home?</p>
+                        <p>What is a seller’s market?</p>
+                        <p>What is a buyer’s market?</p>
+                        <p>How much do I have to pay an agent to help me buy a house?</p>
+                        <p>How much do I need for a down payment?</p>
+                </div>
+                <div class="renting" id="faq-options">
+                    <h3>Renting:</h3>
+                    <p>Do I need to bring my furniture?</p>
+                    <p>Are utility bills included?</p>
+                    <p>How long before I can move in?</p>
+                    <p>What paperwork is required to rent a property?</p>
+                    <p>How much do I pay for deposit?</p>
+                </div>
+                <div class="selling" id="faq-options">
+                    <h3>Selling:</h3>
+                    <p>Should I Do Anything to My House Before I Sell It?</p>
+                    <p>How Do I Determine How Much to Sell My House For?</p>
+                    <p>Can I Do It Myself, or Do I Need a Real Estate Agent?</p>
+                </div>
 
-                <p>If you have any other questions or want to book one of our Agents, you're welcome to contact us <a href="contact.html">here</a></p>
+                <p>If you have any other questions or want to book one of our Agents, you're welcome to contact us <a href="contact.html">HERE</a>.</p>
             </div>
         </div>
 
