made a list of FAQ

--- a/html-files/about.html
+++ b/html-files/about.html
@@ -102,6 +102,31 @@
 
             <div class="textbox" id="FAQ">
                 <h2>FAQ</h2>
+                <details class="buying" id="faq-questions">
+                    <summary>Buying:</summary>
+                    <p>What the first step of the home buying process?</p>
+                    <p>How long does it take to buy a home?</p>
+                    <p>What is a seller’s market?</p>
+                    <p>What is a buyer’s market?</p>
+                    <p>How much do I have to pay an agent to help me buy a house?</p>
+                    <p>How much do I need for a down payment?</p>
+                </details>
+                <details class="renting" id="faq-questions">
+                    <summary>Renting:</summary>
+                    <p>Do I need to bring my furniture?</p>
+                    <p>Are utility bills included?</p>
+                    <p>How long before I can move in?</p>
+                    <p>What paperwork is required to rent a property?</p>
+                    <p>How much do I pay for deposit?</p>
+                </details>
+                <details class="selling" id="faq-questions">
+                    <summary>Selling:</summary>
+                    <p>Should I Do Anything to My House Before I Sell It?</p>
+                    <p>How Do I Determine How Much to Sell My House For?</p>
+                    <p>Can I Do It Myself, or Do I Need a Real Estate Agent?</p>
+                </details>
+
+                <!-- 
                 <div class="buying" id="faq-options">
                     <h3>Buying Property:</h4>
                         <p>What the first step of the home buying process?</p>
@@ -125,6 +150,7 @@
                     <p>How Do I Determine How Much to Sell My House For?</p>
                     <p>Can I Do It Myself, or Do I Need a Real Estate Agent?</p>
                 </div>
+                -->
 
                 <p>If you have any other questions or want to book one of our Agents, you're welcome to contact us <a href="contact.html">HERE</a>.</p>
             </div>
