--- a/buy-files/poland.html
+++ b/buy-files/poland.html
@@ -133,6 +133,44 @@
                 </div>
             </div>
         </div>
+
+        <div class="estate-wroclaw wrap">
+            <h2>Wroclaw Properties</h2>
+            <div class="property-wroclaw">
+                <div class="estate-photo">
+                    <img src="../photos/alejandra-cifre-gonzalez-ylyn5r4vxcA-unsplash.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>443 Hogwarts Street</h1>
+                        <p>5 Bedrooms, 8 Bathrooms, Kitchen, Living Room, Dinning Room, Basement, Office Room, Pool. BBQ Area, 2 Cars Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$4.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="property-wroclaw-house">
+                <div class="estate-photo">
+                    <img src="../photos/banner.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>666 Cesar Street</h1>
+                        <p>3 Bedrooms, 4 Bathrooms, Kitchen, Living Room, Dinning Room, Basement, 1 Car Garage, Gated Property, Office Room</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
    <!--Footer-->
