--- a/buy-files/poland.html
+++ b/buy-files/poland.html
@@ -170,6 +170,23 @@
                     </div>
                 </div>
             </div>
+            <div class="property-wroclaw-house-one">
+                <div class="estate-photo">
+                    <img src="../photos/Best-Modern-House-Design_-A-New-Era-of-Architecture.webp">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>211 Baker Street</h1>
+                        <p>5 Bedroooms, 7 Bathrooms, Kitchen, Basement, Living Room, Dinning Room, Balcony, 2 Cars Garage, Gated Property, Office Room</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$4.431.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Toyr</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
