--- a/buy-files/poland.html
+++ b/buy-files/poland.html
@@ -187,6 +187,40 @@
                     </div>
                 </div>
             </div>
+            <div class="property-wroclaw-house-two">
+                <div class="estate-photo">
+                    <img src="../photos/alan-j-hendry-zVf-R-r3szw-unsplash.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>900 Bergen Street</h1>
+                        <p>4 Bedrooms, 6 Bathrooms, Kitchen, Living Room, Dinning Room, Balcony, 3 Cars Garage, Pool, BBQ Area, Office Room</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$2.120.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="property-wroclaw-last">
+                <div class="estate-photo">
+                    <img src="../photos/aubrey-odom-ITzfgP77DTg-unsplash.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>951 Ekspress Street</h1>
+                        <p>5 Bedrooms, 6 Bathroom, Kitchen, Living Room, Dinning Room, Front Porch, 2 Cars Garage, BBQ Area, Office Room, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$2.310.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
