--- a/buy-files/poland.html
+++ b/buy-files/poland.html
@@ -222,6 +222,27 @@
                 </div>
             </div>
         </div>
+
+        <div class="estate-gdansk wrap">
+            <h2>Gdansk Properties</h2>
+            <div class="property-gdansk">
+                <div class="estate-photo">
+                    <img src="../photos/bailey-anselme-Bkp3gLygyeA-unsplash.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>111 Stockholm Street</h1>
+                        <p>6 Bedroom, 8 Bathrooms, Kitchen, Living Room, Dinning Room, Balcony, Outdoor Garage, BBQ Area, Attic, Basement, Office Room</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$4.900.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Toyr</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
    <!--Footer-->
