--- a/buy-files/poland.html
+++ b/buy-files/poland.html
@@ -242,6 +242,23 @@
                     </div>
                 </div>
             </div>
+            <div class="property-gdansk-house">
+                <div class="estate-photo">
+                    <img src="../photos/canalhermi-xlnTu6BV4x0-unsplash.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>333 Buckingham Street</h1>
+                        <p>10 Bedrooms, 15 Bathrooms, Kitchen, Living Room, Dinning Room, 5 Cars Garage, Attic, Basement, 2 Office Rooms, Library, Large Garden</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$15.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
