--- a/buy-files/poland.html
+++ b/buy-files/poland.html
@@ -259,6 +259,57 @@
                     </div>
                 </div>
             </div>
+            <div class="property-gdansk-house-one">
+                <div class="estate-photo">
+                    <img src="../photos/Contemporary-House-57123-5-2_43096e0838.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>976 Oslo Street</h1>
+                        <p>3 Bedrooms, 4 Bathrooms, Kitchen, Living Room, Dinning Room, Basement, Office Room, 2 Cars Garage, BBQ Area</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$3.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="property-gdansk-house-two">
+                <div class="estate-photo">
+                    <img src="../photos/cube-facade-aurora-double-storey-house-designs.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>980 Darwin Street</h1>
+                        <p>4 Bedrooms, 5 Bathrooms, Kitchen, Living Room, Dinning Room, Office Room, 2 Cars Garage, Balcony, BBQ Area</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$1.120.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="property-gdansk-last">
+                <div class="estate-photo">
+                    <img src="../photos/daniel-barnes-PyFzygP2eNg-unsplash.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>12 Royal Street</h1>
+                        <p>10 Bedrooms, 12 Bathrooms,Kitchen, Living Room, Dinning Room, 2 Office Rooms, 5 Cars Garage, Pool, Library, Basement, BBQ Area</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$29.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
