--- a/buy-files/poland.html
+++ b/buy-files/poland.html
@@ -300,10 +300,31 @@
                 <div class="estate-info">
                     <div class="estate-info-text">
                         <h1>12 Royal Street</h1>
-                        <p>10 Bedrooms, 12 Bathrooms,Kitchen, Living Room, Dinning Room, 2 Office Rooms, 5 Cars Garage, Pool, Library, Basement, BBQ Area</p>
+                        <p>10 Bedrooms, 12 Bathrooms, Kitchen, Living Room, Dinning Room, 2 Office Rooms, 5 Cars Garage, Pool, Library, Basement, BBQ Area</p>
                     </div>
                     <div class="estate-price">
                         <p><b>$29.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="estate-krakow wrap">
+            <h2>Krakow Properties</h2>
+            <div class="property-krakow">
+                <div class="estate-photo">
+                    <img src="../photos/daniel-barnes-RKdLlTyjm5g-unsplash.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>9 Bedrooms, 11 Bathrooms, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Outdoor Garage, BBQ Area, Gated Property</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$9.000.000</b></p>
                     </div>
                     <div id="estate-button">
                         <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
