--- a/buy-files/poland.html
+++ b/buy-files/poland.html
@@ -331,6 +331,23 @@
                     </div>
                 </div>
             </div>
+            <div class="property-krakow-house">
+                <div class="estate-photo">
+                    <img src="../photos/david-samuel-levinson-I3JPit72W_Q-unsplash.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>5 Bedrooms, 7 Bathroms, Kitchen, Living Room, Dinning Room, Office Room, 2 Cars Garage, BBQ Area, Jazz Era Archtecture</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$7.010.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
