--- a/buy-files/poland.html
+++ b/buy-files/poland.html
@@ -348,6 +348,11 @@
                     </div>
                 </div>
             </div>
+            <div class="property-krakow-house-one">
+                <div class="estate-photo">
+                    <img src="../photos/david-samuel-levinson-lqqUCTcQsXw-unsplash.jpg">
+                </div>
+            </div>
         </div>
     </main>
 
