--- a/buy-files/poland.html
+++ b/buy-files/poland.html
@@ -352,6 +352,35 @@
                 <div class="estate-photo">
                     <img src="../photos/david-samuel-levinson-lqqUCTcQsXw-unsplash.jpg">
                 </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Royal Archtecture, 5 Bedrooms, 9 Bathrooms, Kitchen, Living Room, Dinning Room, 2 Cars Garage, Gated Property, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$11.250.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="property-krakow-house-two">
+                <div class="estate-photo">
+                    <img src="../photos/digital-marketing-agency-ntwrk-g39p1kDjvSY-unsplash.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>4 Bedrooms, 6 Bathrooms, Kitchen, Living Room, Dinning Room, Balcony, Pool, BBQ Area, Basement, 2 Cars Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$4.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
