--- a/buy-files/denmark.html
+++ b/buy-files/denmark.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link type="text/css" rel="stylesheet" href="../css-files/header-footer.css">
+    <link type="text/css" rel="stylesheet" href="../css-files/property-cards.css">
     <meta charset="UTF-8">
     <meta name="Denmark Locations Page Real Estate Agency" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="AKB">
@@ -32,50 +33,106 @@
 
     <!--Content-->
     <main class="page-body">
+
+        <div id="page-location-info-box">
+            <div id="property-box-text">
+                <h1>Denmark Locations</h1>
+                <p>Below You Will Find All Our Properties We Are Currently Selling In Denmark</p>
+                <p>Keep In Mind That The List Can Change Quickly, Thou To Our Company Working Around The Clock</p>
+                <p>With Selling Houses, Buying Houses And Constructing Houses</p>
+                <p>If You Find A House Which Caught Your Eye, Be Fast And Reach Out To Us</p>
+                <p>To Either Book A Tour Of The House Or Buy It</p>
+            </div>
+        </div>
+
+        <div class="estate-copenhagen wrap">
+            <h2>Coprnhagen Properties</h2>
+            <div class="property-copenhagen">
+                <div class="estate-photo">
+                    <img src="../photos/fabian-wiktor-MBKFuFqlMwo-unsplash.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>7 Bedrooms, 9 Bathrooms, Kitchen, Living Room, Dinning Room, Library, Basement, Attic, 3 Cars Garage, Gated Property</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$14.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </main>
 
-    <!--Footer-->
-    <footer class="page-footer">
-        <div class="footer-about">
-            <p>About Us</p>
-            <a href="../html-files/about.html">About Us</a>
-            <br>
-            <a href="../html-files/contact.html">Contact Us</a>
+   <!--Footer-->
+   <footer class="page-footer">
+    <div id="footer-info-box">
+        <h1>Have Any Questions</h1>
+        <p>With Us You Can Sell, Buy, Rent And Build. We Are Here To Offer You The Best Of The Best In The Market.</p>
+        <p>Real Estate Agency Have Decades Worth Of Experience, We Have The Best Property Brokers, The Best Construction Workers, And The Best Houses And Apartment</p>
+    </div>
+    <div id="footer-call-icon-box">
+        <div id="footer-call-icon">
+            <img src="../media/icons8-call-50.png">
         </div>
-        <div class="footer-work">
-            <p>Our Work</p>
-            <a href="../html-files/staff.html">Our Staff</a>
-            <br>
-            <a href="../html-files/work-for-us.html">Work</a>
+        <div id="footer-call-icon-text">
+            <p>123 456 789</p>
         </div>
-        <div class="footer-services-1">
-            <p>Buy Or Sell</p>
-            <a href="../html-files/buy.html">Buy</a>
-            <br>
-            <a href="../html-files/sell.html">Sell</a>
+    </div>
+    <div id="footer-mall-icon-box">
+        <div id="footer-mail-icom">
+            <img src="../media/icons8-email-50.png">
         </div>
-        <div class="footer-services-2">
-            <p>Build Or Rent</p>
-            <a href="../html-files/construction.html">Build</a>
-            <br>
-            <a href="../html-files/rent.html">Rent</a>
+        <div id="footer-mail-icon-text">
+            <p>RealEstateAgency@gmail.com</p>
         </div>
-        <div class="social-media">
-            <p>Social Media</p>
-            <a href="https://www.instagram.com/noroff/">
-                <img src="../media/instagram.png">
-            </a>
-            <a href="https://www.facebook.com/noroff">
-                <img src="../media/facebook.png">
-            </a>
-            <a href="https://www.youtube.com/channel/UCyDPAsKvRn8fkEM8IkQeLSQ">
-                <img src="../media/yotube.png">
-            </a>
-            <a href="https://twitter.com/noroff?lang=en">
-                <img src="../media/twiiter.png">
-            </a>
+    </div>
+    <div id="footer-about-box">
+        <h1>About Real Estate Agency</h1>
+        <a href="../html-files/about.html">About Us</a>
+        <br>
+        <a href="../html-files/our-misjion.html">Our Mision</a>
+        <br>
+        <div id="footer-middle-text">
+            <a href="../html-files/login.html">Login / Create Account</a>
         </div>
-    </footer>
+        <div id="footer-longer-text">
+            <a href="../html-files/history.html">Real Estate Agency Background</a>
+        </div>
+        <div id="footer-last-text">
+            <a href="../html-files/faq.html">FAQ</a>
+        </div>
+    </div>
+    <div id="footer-work-box">
+        <h1>Real Estate Agency Work</h1>
+        <a href="../html-files/contact.html">Contact Us</a>
+        <br>
+        <a href="../html-files/staff.html">Our Team</a>
+        <br>
+        <a href="../html-files/work-for-us.html">Carrer</a>
+        <br>
+        <div id="footer-middle-text-work">
+            <a href="../html-files/vision-for-the-future.html">Our Future Vision</a>
+        </div>
+        <div id="footer-last-text-work">
+            <a href="../html-files/faq.html">FAQ</a>
+        </div>
+    </div>
+    <div id="footer-services-box">
+        <h1>Our Services</h1>
+        <a href="../html-files/buy.html">Buy</a>
+        <br>
+        <a href="../html-files/sell.html">Sell</a>
+        <br>
+        <a href="../html-files/rent.html">Rent</a>
+        <br>
+        <a href="../html-files/construction.html">Build</a>
+    </div>
+</footer>
 </body>
 
 </html>
