--- a/buy-files/denmark.html
+++ b/buy-files/denmark.html
@@ -64,6 +64,23 @@
                     </div>
                 </div>
             </div>
+            <div class="property-copenhagen-house">
+                <div class="estate-photo">
+                    <img src="../photos/frames-for-your-heart-_KP6mk2Iz8k-unsplash.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>4 Bedrooms, 5 Bathrooms, Gated Property, Kitchen, Living Room, Dinning Room, Library, Basement, 2 Cars Garage, Pool, BBQ Area</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$6.000.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </main>
