--- a/buy-files/denmark.html
+++ b/buy-files/denmark.html
@@ -81,6 +81,23 @@
                     </div>
                 </div>
             </div>
+            <div class="property-copenhagen-house-one">
+                <div class="estate-photo">
+                    <img src="../photos/frames-for-your-heart-jFNQdzwk6U8-unsplash.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>6 Bedrooms, 8 Bathrooms, Huge Garden, Kitchen, Living Room, Dinning Room, Library, Basement, 3 Cars Garage, BBQ Area, Pool, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$12.000.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </main>
