--- a/buy-files/denmark.html
+++ b/buy-files/denmark.html
@@ -98,6 +98,23 @@
                     </div>
                 </div>
             </div>
+            <div class="property-copenhagen-house-two">
+                <div class="estate-photo">
+                    <img src="../photos/frames-for-your-heart-mR1CIDduGLc-unsplash.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>3 Bedrooms, 4 Bathrooms, Kitchen, Living Room, Dinning Room, Library, Basement, Pool, 2 Cars Garage, 2 Office Rooms, BBQ Area</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$4.250.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </main>
