--- a/buy-files/denmark.html
+++ b/buy-files/denmark.html
@@ -115,6 +115,23 @@
                     </div>
                 </div>
             </div>
+            <div class="property-copenhagen-last">
+                <div class="estate-photo">
+                    <img src="../photos/grant-durr-8N6s3Fmw-h0-unsplash.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>5 Bedrooms, 7 Bathrooms, Kitchen, Living Room, Dinning Room, Library, Basement, Attic, Bay Acess, Office Room, BBQ Area, 3 Cars Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$5.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </main>
