--- a/buy-files/denmark.html
+++ b/buy-files/denmark.html
@@ -134,6 +134,36 @@
             </div>
         </div>
 
+        <div class="flex-three-info-boxes wrap">
+            <div id="book-a-tour-info-box">
+                <div class="property-box-text">
+                    <h1>How Does Booking A Tour Work?</h1>
+                    <p>Each Property Listing Has A Button Which Allows You Quickly Booking A Tour Of Any House</p>
+                    <p>But Here Comes The Fun Fact About This Service We Are Offering You</p>
+                    <p>You Don't Have To Be Physcially Present For The Tour Of The House</p>
+                    <p>Our Tours Offer You The Possibilty Of Taking A Tour Of THe House Through FaceTime, Zoom Or What's Up</p>
+                </div>
+            </div>
+            <div id="price-info-box">
+                <div class="property-box-text">
+                    <h1>Information About The Prices</h1>
+                    <p>Each Property We Are Selling Has A Estimated Price Which You Can See Just Above The "Book A Tour" Button</p>
+                    <p>The Price Isn't Set In Stone, We Are Fully Willing To Negotiate The Price With You</p>
+                    <p>If You Are Interested In A Property Which We Are Currently Selling Book A Tour Of The House Either Through Internett Or In Person And Negotiate The Price With The Proeprty Broker</p>
+                    <p>Since Every Broker Is In Charge Of The Price And Everything About The Property The Simplest Solution For You Will Be To Have An Open Conversasion With The Property Broker</p>
+                </div>
+            </div>
+            <div id="building-maybe-box">
+                <div class="property-box-text">
+                    <h1>Know Where You Want To Live But Dont See Your Dream House?</h1>
+                    <p>Do You Know Where You Want To Settle Down In Your Dream House But Don't See Your Dream House?</p>
+                    <p>No Worries, We Have Your Back, We Can Construct Your Dream House</p>
+                    <p>We Have The Best Architects, Builders And Materials For Your Dream House</p>
+                    <p>Contact Us On Email At Any Time Or Call Us In Our Openning Hours</p>
+                </div>
+            </div>
+        </div>
+
     </main>
 
    <!--Footer-->
