--- a/buy-files/romaina.html
+++ b/buy-files/romaina.html
@@ -81,6 +81,40 @@
                     </div>
                 </div>
             </div>
+            <div class="property-bucharest-house-one">
+                <div class="estate-photo">
+                    <img src="../photos/lycs-architecture-kUdbEEMcRwE-unsplash.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>5 Bedroms, 7 Bathrooms, Kitchen, Living Room, Dinning Room, Basement, BBQ Area, Pool, Library, Pool, Office Room, Balcony</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$9.500.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="property-bucharest-house-two">
+                <div class="estate-photo">
+                    <img src="../photos/nick-romanov-_hw4aUQ81ic-unsplash.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>12 Bedrooms, 15 Bathrooms, Kitchen, Livng Room, Dinning Room, Basement, BBQ Area, Lake Access, 2 Office Rooms, Attic, 5 Cars Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$7.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
