--- a/buy-files/romaina.html
+++ b/buy-files/romaina.html
@@ -115,6 +115,23 @@
                     </div>
                 </div>
             </div>
+            <div class="property-bucharest-last">
+                <div class="estate-photo">
+                    <img src="../photos/nicola-nuttall-ks8cKjLWYK8-unsplash.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>13 Bedrooms, 15 Bathrooms, Living Room, Kitchen, Dinning Room, Basement, Attic, 2 Office Rooms, Library, Wine Celler, 6 Cars Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$5.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
