--- a/buy-files/holland.html
+++ b/buy-files/holland.html
@@ -81,6 +81,23 @@
                     </div>
                 </div>
             </div>
+            <div class="property-amsterdam-house-one">
+                <div class="estate-photo">
+                    <img src="../photos/r-architecture-2gDwlIim3Uw-unsplash.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>4 Bedrooms, 6 Bathrooms, Kitchen, Living Room, Dinning Room, Office Room, BBQ Area, Basement, 3 Cars Garage, Gated Property</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$3.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
