--- a/buy-files/holland.html
+++ b/buy-files/holland.html
@@ -98,6 +98,23 @@
                     </div>
                 </div>
             </div>
+            <div class="property-amsterdan-house-two">
+                <div class="estate-photo">
+                    <img src="../photos/r-architecture-NeN1D7Z3Ick-unsplash.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>5 Bedrooms, 7 Bathrooms, Kitchen, Dinning Room, Living Room, 2 Office Rooms, Gated Property, 2 Cars Garage, BBQ Area</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$5.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
