--- a/buy-files/holland.html
+++ b/buy-files/holland.html
@@ -115,6 +115,23 @@
                     </div>
                 </div>
             </div>
+            <div class="property-amsterdam-last">
+                <div class="estate-photo">
+                    <img src="../photos/sebastian-staines-6_8nhHo4fDc-unsplash.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>7 Bedrooms, 9 Bathrooms, Ocean Access, Kitchen, Dinning Room, Living Room, 2 Office Room, 3 Cars Garage, BBQ Area, Basement</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$5.900.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
