--- a/buy-files/holland.html
+++ b/buy-files/holland.html
@@ -133,6 +133,27 @@
                 </div>
             </div>
         </div>
+
+        <div class="estate-rotterdam wrap">
+            <h2>Rotterdam Properties</h2>
+            <div class="property-rotterdam">
+                <div class="estate-photo">
+                    <img src="../photos/SiteImage-Landing-modern-house-plans-1.webp">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>4 Bedrooms, 6 Bathrooms, Kitchen, Living Room,Dinning Room, Office Room, Basement, 2 Cars Garage, Pool, BBQ Area</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$5.430.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
    <!--Footer-->
