--- a/buy-files/holland.html
+++ b/buy-files/holland.html
@@ -143,10 +143,27 @@
                 <div class="estate-info">
                     <div class="estate-info-text">
                         <h1>221 Baker Street</h1>
-                        <p>4 Bedrooms, 6 Bathrooms, Kitchen, Living Room,Dinning Room, Office Room, Basement, 2 Cars Garage, Pool, BBQ Area</p>
+                        <p>4 Bedrooms, 6 Bathrooms, Kitchen, Living Room, Dinning Room, Office Room, Basement, 2 Cars Garage, Pool, BBQ Area</p>
                     </div>
                     <div class="estate-price">
                         <p><b>$5.430.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="property-rotterdam-house">
+                <div class="estate-photo">
+                    <img src="../photos/tobias-nii-kwatei-quartey-VqWy2xlGK6Q-unsplash.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>6 Bedrooms, 8 Bathrooms, Kitchen, Living Room, Dinning Room, Basement, Attic, Dutch Archtecture, BBQ Area, 3 Cars Garage, Gated Property</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$2.987.000</b></p>
                     </div>
                     <div id="estate-button">
                         <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
