--- a/buy-files/holland.html
+++ b/buy-files/holland.html
@@ -170,6 +170,40 @@
                     </div>
                 </div>
             </div>
+            <div class="property-rotterdam-house-one">
+                <div class="estate-photo">
+                    <img src="../photos/vj-von-art-BP1Ze0qcp-c-unsplash.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>4 Bedrooms, 5 Bathrooms, 2 Cars Garage, Kitchen, Basement, Living Room, Dinning Room, Pool, BBQ Area, Office Room </p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$6.987.00</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="property-rotterdam-house-two">
+                <div class="estate-photo">
+                    <img src="../photos/w991x660.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>9 Bedrooms, 12 Bathrooms, 4 Cars Garage, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Library</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$12.965.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
