--- a/buy-files/holland.html
+++ b/buy-files/holland.html
@@ -204,6 +204,23 @@
                     </div>
                 </div>
             </div>
+            <div class="property-rotterdam-last">
+                <div class="estate-photo">
+                    <img src="../photos/walter-sturn--_folCc8Q8k-unsplash.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$31.000.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
